force-app/main/default/objects/Integration_Error_Log__c/Integration_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Error Log</label>
    <pluralLabel>Integration Error Logs</pluralLabel>
    <description>Persistent error log records written by the IntegrationErrorLogTrigger subscriber. Source of truth for DML and callout failures across service and batch layers.</description>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>ERR-{0000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>