force-app/main/default/objects/Integration_Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Class.method that published the originating Platform Event.</description>
    <label>Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>