force-app/main/default/objects/Integration_Error_Log__c/fields/Event_UUID__c.field-meta.xml
<CustomField>
    <fullName>Event_UUID__c</fullName>
    <description>Platform Event EventUuid — globally unique identifier for the source event. Used for deduplication if subscriber trigger fires more than once.</description>
    <externalId>true</externalId>
    <label>Event UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>