force-app/main/default/objects/Integration_Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce Record ID of the record that triggered the error. Links back to the failed record for investigation.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>