force-app/main/default/objects/Integration_Error_Log__c/fields/Replay_Id__c.field-meta.xml
<CustomField>
    <fullName>Replay_Id__c</fullName>
    <description>Platform Event ReplayId — position in the event stream. Replay from this ID to re-process events after a subscriber failure or gap.</description>
    <label>Replay Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>