force-app/main/default/objects/Integration_Error_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Salesforce StatusCode enum or HTTP status code from the originating failure.</description>
    <label>Status Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>